client/views/app/_partials/app-nav.css
h5 {
  font-size: 20px;
}

.container {
  padding: 0;
  margin: 0 auto;
  position: relative;
  overflow: hidden;
}

.wrapper {
  display: grid;
  grid-template-columns: 1fr;
}

.navbar--site-header {
  align-items: center;
  position: fixed;
  top: 0;
  left: 0;
  width: 100vw;
  height: 55px;
  z-index: 99;
  background: #006C35;
}

.navbar--container {
  height: 100%;
}

.navbar--site-header-inner {
  width: 100%;
  height: 100%;
  display: flex;
  justify-content: space-between;
  align-items: center;
  margin: 0 auto;
  padding: 0 30px;
}

.open-nav {
  background: transparent;
  border: none;
  padding: 5px 10px;
}

.home-link {
  display: flex;
	text-decoration: none;
	color: rgba(255, 255, 255, 0.9);
	font-weight: 700;
	font-size: 19px;
}

.mask {
  position: absolute;
  top: 0;
  left: 0;
  width: 100%;
  height: 0;
  background-color: rgba(0, 0, 0, 0.45);
  opacity: 0;
  filter: alpha(opacity=45);
  -webkit-transition: opacity 0.3s linear, height 0s ease 0.3s;
  transition: opacity 0.3s linear, height 0s ease 0.3s;
  pointer-events: none;
}

.mask-open {
  height: 100vh;
  opacity: 1;
  -webkit-transition: none;
  transition: none;
  -webkit-animation: antdDrawerFadeIn 0.3s cubic-bezier(0.7, 0.3, 0.1, 1);
  animation: antdDrawerFadeIn 0.3s cubic-bezier(0.7, 0.3, 0.1, 1);
  pointer-events: auto;
}

.menu-line {
  width: 25px;
  height: 1.5px;
  background: #ffffff;
  margin: 7px 0;
  border: none;
}

.side-menu-mobile {
  height: 100%;
  width: 0;
  position: fixed;
  z-index: 1;
  top: 0;
  right: 0;
  background-color: #ffffff;
  overflow-x: hidden;
  transition: 0.2s;
  padding-top: 60px;
}

.side-menu-mobile a,
.auth-user-name {
  padding: 8px 8px 8px 32px;
  text-decoration: none;
  font-size: 18px;
  color: rgba(0, 0, 0, 0.8);
  display: block;
  transition: 0.3s;
}

.side-menu-mobile a:not(:last-child),
.auth-user-name {
  border-bottom: var(--border-color-light);
}

.auth-user-name {
  font-weight: 700;
}

.side-menu-mobile a:hover {
  color: #f1f1f1;
}

.side-menu-mobile .close-menu-button {
  position: absolute;
  top: 10px;
  right: 25px;
  font-size: 36px;
  margin-left: 50px;
}

.navbar--header-links {
  display: none;
}

.navbar--header-links-mobile-container {
  display: flex;
  justify-content: flex-end;
  align-items: center;
}

.navbar--header-links-mobile {
  display: flex;
  justify-content: center;
  align-items: center;
  height: 100%;
  margin: 0;
  padding: 0;
}

.navbar--header-links-mobile li {
  display: flex;
  justify-content: center;
  align-items: center;
  height: 100%;
  margin-right: 10px;
}

.navbar-item {
  min-width: 75px;
}

.navbar--header-links-mobile a {
  font-size: 13px;
  line-height: 20px;
  letter-spacing: 0px;
  font-weight: 500;
  color: rgba(255, 255, 255, 0.8);
  text-transform: uppercase;
  text-decoration: none;
  line-height: 16px;
}

.navbar--header-links-mobile a:hover,
.navbar--header-links-mobile a:active {
  color: #fff;
}

@media (min-width: 481px) {
  .navbar--site-header {
    display: flex;
  }

  .navbar--container {
    width: 100%;
    height: 100%;
    margin: 0 auto;
    padding: 0 50px;
  }

  .navbar--site-header-inner {
    position: relative;
    align-items: center;
  }

  .open-nav {
    display: none;
  }

  .navbar--header-links {
    display: flex;
    align-items: center;
    height: 100%;
    margin: 0;
    padding: 0;
  }

  .navbar--header-links-mobile {
    display: none;
  }

  .navbar--header-links li {
    display: flex;
    justify-content: space-around;
    align-items: center;
    height: 100%;
  }

  .navbar--header-links li:nth-last-child(2) {
    margin-right: 30px;
  }

  .navbar--header-links a {
    font-size: 13px;
    line-height: 20px;
    letter-spacing: 0px;
    font-weight: 500;
    color: rgba(255, 255, 255, 0.8);
    text-transform: uppercase;
    text-decoration: none;
    line-height: 16px;
  }

  .navbar--header-links a:hover,
  .navbar--header-links a:active {
    color: #fff;
  }

  .messages {
    margin-right: 2px;
  }

  .dropdown-menu-container {
    position: relative;
    display: inline-block;
    height: 100%;
  }

  .dropdown-button {
    display: flex;
    justify-content: center;
    align-items: center;
    height: 100%;
    background: transparent;
    padding: 14px 16px 14px 0;
    border: none;
    cursor: pointer;
    font-size: 13px;
    line-height: 20px;
    letter-spacing: 0px;
    font-weight: 500;
    color: rgba(255, 255, 255, 0.8);
    text-transform: uppercase;
    text-decoration: none;
    line-height: 16px;
  }

  .user-avatar-menu {
    width: 30px;
    height: 30px;
    border-radius: 25px;
    z-index: -1;
    position: relative;
    object-fit: cover;
  }

  .down-arrow {
    width: 0;
    height: 0;
    margin-left: 5px;
    border-left: 5px solid transparent;
    border-right: 5px solid transparent;
    border-top: 5px solid rgba(255, 255, 255, 0.7);
    transition: all 0.1s linear;
    z-index: -1;
    position: absolute;
    top: 50%;
    right: -5px;
  }

  .up-arrow {
    border-top: none;
    border-bottom: 5px solid rgba(255, 255, 255, 0.7);
  }

  .dropdown-menu-container a:hover {
    background-color: #f1f1f1;
    color: rgba(0, 0, 0, 0.8);
    border-radius: 0;
  }

  .dropdown-menu-container a:hover:first-child {
    border-radius: 6px 6px 0 0;
  }

  .dropdown-menu-container a:hover:last-child {
    border-radius: 0 0 6px 6px;
  }

  .dropdown-button:hover {
    background-color: rgba(0, 0, 0, 0.05);
  }

  .dropdown-menu-content {
    display: none;
    position: absolute;
    opacity: 0;
    transition: all 0.3s ease;
    background-color: #ffffff;
    box-shadow: 0 3px 6px -4px rgba(0, 0, 0, 0.12), 0 6px 16px 0 rgba(0, 0, 0, 0.08),
      0 9px 28px 8px rgba(0, 0, 0, 0.05);
    top: 50px;
    z-index: 100;
    width: 160px;
    margin-top: 2px;
    list-style: none;
    border-radius: 6px;
    right: 0;
    left: auto;
  }

  .dropdown-menu-content:before {
    position: absolute;
    display: block;
    content: '';
    border: 6px solid transparent;
    border-bottom: 6px solid #ffffff;
    top: -12px;
    right: 40px;
    left: auto;
  }

  .auth-user-name-wrapper {
    border-bottom: var(--border-color-dark);
  }

  .dropdown-menu-content a,
  .auth-user-name {
    padding: 12px 16px;
    border-radius: 6px;
    text-decoration: none;
    display: block;
    font-size: 13px;
    line-height: 20px;
    letter-spacing: 0px;
    font-weight: 500;
    color: rgba(0, 0, 0, 0.8);
    text-transform: uppercase;
    text-decoration: none;
    line-height: 16px;
  }

  .auth-user-name {
    font-weight: 700;
    border-radius: 0;
  }

  .dropdown-item {
    position: relative;
  }

  .show-dropdown-menu-content {
    display: block;
    opacity: 1;
    transition: all 0.3s ease;
    animation: animation-fade-in 0.3s ease;
  }
}

